force-app/main/default/objects/Quote/fields/CampaignAmount__c.field-meta.xml
<CustomField>
    <fullName>CampaignAmount__c</fullName>
    <label>Valor das campanhas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>