force-app/main/default/objects/Quote/fields/CommercialPolicy__c.field-meta.xml
<CustomField>
    <fullName>CommercialPolicy__c</fullName>
    <label>Políticas comerciais</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>