force-app/main/default/objects/Quote/fields/CotacaoClonadaId__c.field-meta.xml
<CustomField>
    <fullName>CotacaoClonadaId__c</fullName>
    <label>Cotação Clonada Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>