force-app/main/default/objects/Quote/fields/DatadePagamento__c.field-meta.xml
<CustomField>
    <fullName>DatadePagamento__c</fullName>
    <label>Data de Pagamento</label>
    <type>Date</type>
</CustomField>