force-app/main/default/objects/Quote/fields/DataPagamentoFuturo__c.field-meta.xml
<CustomField>
    <fullName>DataPagamentoFuturo__c</fullName>
    <label>Data Pagamento Futuro</label>
    <type>Date</type>
</CustomField>