force-app/main/default/objects/Quote/fields/DataVendaFutura__c.field-meta.xml
<CustomField>
    <fullName>DataVendaFutura__c</fullName>
    <label>Data Venda Futura</label>
    <type>Date</type>
</CustomField>