force-app/main/default/objects/Quote/fields/ImageRightsValue__c.field-meta.xml
<CustomField>
    <fullName>ImageRightsValue__c</fullName>
    <label>Valor do direito de imagem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>