force-app/main/default/objects/Quote/fields/Motivo_Recusa_Celebridade__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Recusa_Celebridade__c</fullName>
    <label>Motivo Recusa Celebridade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>