force-app/main/default/objects/Quote/fields/NumeroProposta__c.field-meta.xml
<CustomField>
    <fullName>NumeroProposta__c</fullName>
    <label>Número da proposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>