force-app/main/default/objects/Quote/fields/PagamentoFuturo__c.field-meta.xml
<CustomField>
    <fullName>PagamentoFuturo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pagamento Futuro</label>
    <type>Checkbox</type>
</CustomField>