force-app/main/default/objects/Quote/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Forma de pagamento</label>
    <type>TextArea</type>
</CustomField>