force-app/main/default/objects/Quote/fields/PaymentsInstallments__c.field-meta.xml
<CustomField>
    <fullName>PaymentsInstallments__c</fullName>
    <label>Parcelas de pagamento</label>
    <type>TextArea</type>
</CustomField>