force-app/main/default/objects/Quote/fields/PieceAmount__c.field-meta.xml
<CustomField>
    <fullName>PieceAmount__c</fullName>
    <label>Valor das peças</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>