force-app/main/default/objects/Quote/fields/PorcentagemAcrescimoModoPagamento__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemAcrescimoModoPagamento__c</fullName>
    <label>PorcentagemAcrescimoModoPagamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>