force-app/main/default/objects/Quote/fields/PorcentagemDescontoModoPagamento__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemDescontoModoPagamento__c</fullName>
    <label>PorcentagemDescontoModoPagamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>