force-app/main/default/objects/Quote/fields/Proposal_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Proposal_ExpirationDate__c</fullName>
    <description>Data de Validade/expiração da Proposta</description>
    <label>Data de Validade da Proposta</label>
    <type>Date</type>
</CustomField>