force-app/main/default/objects/Quote/fields/ProposalSubmissionDates__c.field-meta.xml
<CustomField>
    <fullName>ProposalSubmissionDates__c</fullName>
    <label>Datas de envio de proposta</label>
    <type>DateTime</type>
</CustomField>