force-app/main/default/objects/Quote/fields/Sincronizado__c.field-meta.xml
<CustomField>
    <fullName>Sincronizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sincronizado</label>
    <type>Checkbox</type>
</CustomField>