force-app/main/default/objects/Quote/fields/Valor_Final__c.field-meta.xml
<CustomField>
    <fullName>Valor_Final__c</fullName>
    <label>Valor Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>