force-app/main/default/objects/Quote/fields/ValorDesconto__c.field-meta.xml
<CustomField>
    <fullName>ValorDesconto__c</fullName>
    <label>Valor Desconto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>