force-app/main/default/objects/Quote/fields/ValorTotalMidia__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalMidia__c</fullName>
    <label>Valor Total Mídia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>