force-app/main/default/objects/Quote/fields/VendaFutura__c.field-meta.xml
<CustomField>
    <fullName>VendaFutura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venda Futura</label>
    <type>Checkbox</type>
</CustomField>