force-app/main/default/objects/Quote/listViews/Lista_Area_de_Dados_Fabio2.listView-meta.xml
<ListView>
    <fullName>Lista_Area_de_Dados_Fabio2</fullName>
    <columns>Owner</columns>
    <columns>OPPORTUNITY.OWNER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>Valor_Final__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>TotalAmount__c</columns>
    <columns>NumeroProposta__c</columns>
    <columns>DataVendaFutura__c</columns>
    <columns>VendaFutura__c</columns>
    <filterScope>Everything</filterScope>
    <label>Lista Area de Dados - Fabio 2</label>
</ListView>